<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_measurement_traction_title">

        <EditTextPreference
            android:title="@string/pref_measurement_traction_bufflength_title"
            android:summary="@string/pref_measurement_traction_bufflength_summary"
            android:key="@string/pref_measurement_traction_bufflength_key"
            android:defaultValue="@string/pref_measurement_traction_bufflength_defvalue"
            android:inputType="number"/>

        <EditTextPreference
            android:title="@string/pref_measurement_traction_slide_accel_title"
            android:summary="@string/pref_measurement_traction_slide_accel_summary"
            android:key="@string/pref_measurement_traction_slide_accel_key"
            android:defaultValue="@string/pref_measurement_traction_slide_accel_defvalue"
            android:inputType="number"/>

        <EditTextPreference
            android:title="@string/pref_measurement_traction_threshold_accel_title"
            android:summary="@string/pref_measurement_traction_threshold_accel_summary"
            android:key="@string/pref_measurement_traction_threshold_accel_key"
            android:defaultValue="@string/pref_measurement_traction_threshold_accel_defvalue"
            android:inputType="number"/>
    </PreferenceCategory>
</PreferenceScreen>