<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/fragment_measure_friction_chart"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fragment_measure_friction_cb_chart_a_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="a*"/>

            <CheckBox
                android:id="@+id/fragment_measure_friction_cb_chart_avga_enable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="avgA*"/>

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_measure_friction_tv_accel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/accel_equal"/>

        <TextView
            android:id="@+id/fragment_measure_friction_tv_friction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/friction_equal"/>

        <TextView
            android:id="@+id/fragment_measure_friction_tv_samplespersec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/samplespersec_equal"/>

        <TextView
            android:id="@+id/fragment_measure_friction_tv_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/state_equal"/>
    </LinearLayout>

    <ToggleButton
        android:id="@+id/fragment_measure_friction_btn_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textOff="@string/measure_start"
        android:textOn="@string/measure_stop"/>
</LinearLayout>